[package]
name = "asonb"
version = "0.2.0"
edition = "2024"

license = "MPL-2.0"
description = "ASONB is a binary representation of ASON optimized for efficient storage, access, and transmission."
homepage = "https://github.com/hemashushu/asonb"
repository = "https://github.com/hemashushu/asonb"
keywords = ["ason", "asonb", "serde"]
categories = ["encoding", "parsing"]

[dependencies]
ason = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
